--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -5,31 +5,63 @@
         <div class="col-lg-4 mx-auto">
           <h2 class="text-center mb-4">Registro</h2>
           <div class="auto-form-wrapper">
-            <form action="#">
+            <form [formGroup]="formRegister" (ngSubmit)="createUser()">
+
               <div class="form-group">
                 <div class="input-group">
-                  <input type="email" class="form-control" placeholder="Correo">
+                  <input  type="text" 
+                          class="form-control" 
+                          placeholder="Nombre"
+                          formControlName="name">
                   <div class="input-group-append">
                     <span class="input-group-text">
-                      <i class="fa fa-check-circle"></i>
-                    </span>
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="input-group">
-                  <input type="password" class="form-control" placeholder="Password">
-                  <div class="input-group-append">
-                    <span class="input-group-text">
-                      <i class="fa fa-check-circle"></i>
+                      <i  class="fa fa-user"
+                          *ngIf="formRegister.get('name').invalid"></i>
+                      <i  class="fa fa-check-circle text-success"
+                          *ngIf="formRegister.get('name').valid"></i>
                     </span>
                   </div>
                 </div>
               </div>
 
               <div class="form-group">
-                <button class="btn btn-primary submit-btn btn-block">Crear cuenta</button>
+                <div class="input-group">
+                  <input  type="email" 
+                          class="form-control" 
+                          placeholder="Correo" 
+                          formControlName="email">
+                  <div class="input-group-append">
+                    <span class="input-group-text">
+                      <i  class="fas fa-envelope"
+                          *ngIf="formRegister.get('email').invalid"></i>
+                      <i  class="fa fa-check-circle text-success"
+                          *ngIf="formRegister.get('email').valid"></i>
+                    </span>
+                  </div>
+                </div>
               </div>
+
+              <div class="form-group">
+                <div class="input-group">
+                  <input  type="password" 
+                          class="form-control" 
+                          placeholder="Password" 
+                          formControlName="password">
+                  <div class="input-group-append">
+                    <span class="input-group-text">
+                      <i  class="fas fa-lock"
+                          *ngIf="formRegister.get('password').invalid"></i>
+                      <i  class="fa fa-check-circle text-success"
+                          *ngIf="formRegister.get('password').valid"></i>
+                    </span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <button type="submit" [disabled]="formRegister.invalid" class="btn btn-primary submit-btn btn-block">Crear cuenta</button>
+              </div>
+
               <div class="text-block text-center my-3">
                 <span class="text-small font-weight-semibold">ya tienes una cuenta?</span>
                 <br>
