--- a/src/app/modules/ingreso-egreso/detalle/detalle.component.html
+++ b/src/app/modules/ingreso-egreso/detalle/detalle.component.html
@@ -15,11 +15,28 @@
               </thead>
 
               <tbody>
-                <tr>
-                  <td>Descripción</td>
-                  <td>Monto</td>
-                  <td>Tipo</td>
-                  <td>acciones</td>
+                <tr *ngFor="let register of financyRegisters | orderFinacyRegisters">
+                  <td>{{ register.description }}</td>
+                  <td>{{ register.amount | currency:'COP':'symbol-narrow':'4.0' }} </td>
+                  <td><span [ngClass]="{
+                      'badge text-white p-2' : true, 
+                      'bg-success': register.type == 'ingreso',
+                      'bg-danger': register.type == 'egreso'
+                    }">
+                    {{ register.type | uppercase }}</span> 
+                  </td>
+                  <td>
+                    <button type="button" class="btn mr-2 px-3 text-center btn-outline-warning"
+                            title="Editar registro"
+                            (click)="updateItem( register.uid )"> 
+                      <i class="fas fa-edit m-0"></i> 
+                    </button>
+                    <button type="button" class="btn mr-2 px-3 text-center btn-outline-danger"
+                            title="Eliminar registro"
+                            (click)="deleteItem( register.uid )"> 
+                      <i class="fas fa-trash-alt m-0"></i> 
+                    </button>
+                  </td>
                 </tr>
               </tbody>
 
