--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -35,7 +35,12 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <button type="submit" [disabled]="loginForm.invalid" class="btn btn-primary submit-btn btn-block">Login</button>
+                  <button type="submit" 
+                          [disabled]="loginForm.invalid || loadingApp" 
+                          class="btn btn-primary submit-btn btn-block">
+                          <span *ngIf="loadingApp"><i class="fa fa-spin fa-sync"></i> Espere</span>
+                          <span *ngIf="!loadingApp">Ingresar</span>
+                  </button>
                 </div>
                 
                 
