--- a/src/app/modules/ingreso-egreso/ingreso-egreso.component.html
+++ b/src/app/modules/ingreso-egreso/ingreso-egreso.component.html
@@ -7,46 +7,47 @@
               Especifique el monto y el tipo
             </p>
 
-            <form>
+            <form [formGroup]="formRegister" (ngSubmit)="newRegister()">
               
               <div class="form-group">
                 <label>Descripción</label>
-                <input type="text" 
-                       class="form-control" 
-                       placeholder="Descripción"
-                       name="descripcion">
+                <input  type="text" 
+                        class="form-control" 
+                        placeholder="Descripción"
+                        formControlName="description"
+                        name="descripcion">
               </div>
 
               <div class="form-group">
                   <label>Monto</label>
-                  <input type="number" 
-                         class="form-control" 
-                         placeholder="Monto"
-                         name="monto">
+                  <input  type="number" 
+                          class="form-control" 
+                          placeholder="Monto"
+                          formControlName="amount"
+                          name="monto">
                     <p>
                       Debe de ser un monto positivo
                     </p>
                 </div>
 
               <div class="form-group">
-                  <label>Tipo</label>
-                  <br>
-                  <button type="button" class="btn btn-primary btn-block">Ingreso</button>
-                  <!-- <button type="button" class="btn btn-warning btn-block">Egreso</button> -->
+                  <label>Tipo</label> <br>
+                  <button *ngIf="tipo === 'ingreso'" (click)="tipo= 'egreso'"  
+                          type="button" class="btn btn-primary btn-block">Ingreso</button>
+                  <button *ngIf="tipo !== 'ingreso'" (click)="tipo= 'ingreso'" 
+                          type="button" class="btn btn-warning btn-block">Egreso</button>
               </div>
 
               <hr>
-              <button type="button" class="btn btn-success mr-2">
-                <i class="fa fa-save"></i>
-                Agregar
+              <button type="submit"  class="btn btn-success mr-2" [disabled]="formRegister.invalid"
+                      *ngIf="!registrando">
+                <i class="fa fa-save"></i> Agregar
               </button>
 
-              <!-- 
-                <button disabled class="btn btn-success mr-2">
-                  <i class="fa fa-spin fa-sync"></i>
-                  Espere por favor...
-                </button> 
-              -->
+              
+              <button disabled class="btn btn-success mr-2" *ngIf="registrando" [disabled]>
+                <i class="fa fa-spin fa-sync"></i> Espere por favor...
+              </button>
               
               <button type="reset" class="btn btn-light">Cancelar</button>
 
